# streamsight

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/app/: __init__.py  annotate.py  backends.py  capture.py  config.py  dependencies.py  detector.py  main.py  metrics.py  models.py  preprocess.py  registry.py  runtime.py  sources.py  store.py  streaming.py  tracker.py  wire.py
apps/api/tests/: conftest.py  fakes.py  test_api.py  test_api_contract.py  test_backends.py  test_degradation.py  test_metrics_and_capture.py  test_package_layering.py  test_preprocess.py  test_registry_resolution.py  test_repo_layout.py  (+4 more)
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  DATASETS.md  DEPLOYMENT.md  INFERENCE_GUIDE.md  MLOPS.md  QUANTIZATION.md  TRAINING_GUIDE.md  technical-deep-dive.md
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
ml/eval/: benchmark_frontier.py  benchmark_inference.py  eval_coco.py  eval_mot.py  measure_stream_delivery.py  smoke_coco8.py  soak_stream.py  test_coco_conversion.py  test_mot_alignment.py
ml/quantization/: benchmark_precision.py  calibrate.py  export_engines.py
ml/scripts/: benchmark_inference.py  fetch_assets.py  measure_stream_delivery.py  soak_stream.py  train_colab.py
ml/tests/: conftest.py  test_mot_alignment.py  test_smoke_coco8.py
ml/train/: config.yaml  trainer.py
plans/reports/: spec-conformance-260723-2015-streamsight-post-refactor-audit-report.md
(+75 files in other folders)
