[project]
name = "streamsight"
version = "0.1.0"
description = "Real-time object detection and multi-object tracking on a 4 GB laptop GPU"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "tests", "ml/eval"]
pythonpath = ["apps/api"]
addopts = "-q --strict-markers"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore:.*parseString.*:UserWarning",
]
markers = [
  "slow: exercises the real model and takes seconds rather than milliseconds",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "ml/models", "apps/web"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ANN", "RUF", "BLE", "S"]
ignore = [
  "ANN401",  # Any is deliberate at the Ultralytics boundary
  "B008",    # FastAPI Depends/File defaults are the framework idiom
]

[tool.ruff.lint.per-file-ignores]
# Tests assert on internals deliberately and use bare asserts by design.
"apps/api/tests/*" = ["ANN001", "ANN201", "SLF001", "S101"]
# ML scripts are operator tools: subprocess and URL fetches are the whole point.
"ml/*" = ["ANN001", "ANN201", "S101"]

[tool.black]
line-length = 100
target-version = ["py311"]
